...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUK-Ae-b3d">
                                <rect key="frame" x="147" y="205" width="57" height="30"/>
                                <animations/>
                                <state key="normal" title="Submit"/>
                                <connections>
                                    <action selector="Submit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lMt-eZ-84g"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
...
